info toegevoegd en pagina's beter gestyled

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <html lang="nl">
 
 <head>
-	<title>Index</title>
+	<title>Home</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-<h1>titel</h1>
+<div class="container">
 
-<p>tekst</p>
+	<div class="title">
+		<h1>Wentelteefjes maken</h1>
+		<h2>Home</h2>
+	</div>
+
+	<br>
+
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="bereidingswijze.html">Bereidingswijze</a></li>
+</ul>
+
+<h3>Welkom op de wentelteefjes website</h3>
+<p>test</p>
+
+</div>
 </body>
