--- a/bereidingswijze.html
+++ b/bereidingswijze.html
@@ -3,27 +3,43 @@
 <html lang="nl">
 
 <head>
-	<title>Recept</title>
+	<title>Bereidingswijze</title>
 	<link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-<h1>Recept</h1>
+<div class="container">
 
-<p>Hier vind je het recept voor de wentelteefjes</p>
-<br>
-<h3>Wat heb je nodig:</h3>
+	<div class="title">
+		<h1>Wentelteefjes maken</h1>
+		<h2>Bereidingswijze</h2>
+	</div>
+
+	<br>
 
 <ul>
-	<li>4 sneetjes (oud) witbrood
-	<li>2 eieren
-	<li>1,5 dl melk
-	<li>suiker
-	<li>kaneel
-	<li>boter
+  <li><a href="index.html">Home</a></li>
+  <li><a href="bereidingswijze.html">Bereidingswijze</a></li>
 </ul>
 
+<h3>Hier vind de bereidingswijze voor de wentelteefjes</h3>
+<div class="benodigdheden">
+<span>Bereidingstijd:</span>&plusmn;15 minuten
 <br>
+<span>Wat heb je nodig:</span>4 sneetjes (oud) witbrood
+<br>
+<span></span>2 eieren
+<br>
+<span></span>1,5 dl melk
+<br>
+<span></span>suiker
+<br>
+<span></span>kaneel
+<br>
+<span></span>boter
+</div>
+<br>
+
 
 <h3>Stap 1: beslag maken</h3>
 <p>Schenk de melk in een diep bord. Breek de twee eieren in de melk en doe er kaneel bij. Kluts dit alles goed met een vork door elkaar.</p>
@@ -43,4 +59,6 @@
 <h3>De wentelteefjes opdienen</h3>
 <p>Haal het wentelteefje uit de pan als hij klaar is, leg hem op een bord, strooi er wat van je kaneel-suiker strooigoed overheen en smullen maar.<br>Eet smakelijk!</p>
 
+
+</div>
 </body>
