final - alles gestyled en info af

--- a/bereidingswijze.html
+++ b/bereidingswijze.html
@@ -52,13 +52,16 @@
 <br>
 <h3>Stap 4: het eerste wentelteefje maken</h3>
 <p>Als de boter lekker aan het smelten is leg je de eerste boterham in je beslag. Tel tot 10 en draai hem om. Tel weer tot 10 en leg hem daarna in de pan met de gesmolten boter. Timing is hier van belang. Als je de boterham te lang laat zwemmen wordt hij te zompig, is het te kort dan krijg je geen lekker krokant laagje. Oefen zeg ik, tot je het helemaal onder de knie hebt. Draai het wentelteefje om en bak hem aan beide kanten met een krokant laagje.</p>
+<img src="wentelteefje.jpg" width="500">
+<br>
 <br>
 <h3>Stap 5: de 2e boterham voorbereiden en de 1e afronden</h3>
 <p>Het is het lekkerste als je het wentelteefje direct opeet als hij nog warm is, en het is het mooiste als je dan direct door kunt met de volgende. Dit vereist wederom timing. Zorg dat de tweede boterham is voorbereid (zwemmen in je beslag, aan twee kanten) op het moment dat de eerste klaar is. Check of je de boter nog moet aanvullen.</p>
 <br>
 <h3>De wentelteefjes opdienen</h3>
-<p>Haal het wentelteefje uit de pan als hij klaar is, leg hem op een bord, strooi er wat van je kaneel-suiker strooigoed overheen en smullen maar.<br>Eet smakelijk!</p>
-
+<p>Haal het wentelteefje uit de pan als hij klaar is, leg hem op een bord, strooi er wat van je kaneel-suiker strooigoed overheen en smullen maar.</p>
+<img src="wentelteefje2.jpg" width="500">
+<h1>Eet smakelijk!</h1>
 
 </div>
 </body>
